
* XINS/Java Server Framework:
  - Changed the format of the context identifier to app@hostname:time:random.

* XINS/Java Common Library:
  - Replaced the way to find the hostname for the hostname task.

* XINS/Java Client Framework:
  - Removed the deprecated getCode() method from UnsuccessfulCallException.
  - Extended interface of UnacceptableCallResultException.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.202:

* XINS/Java Server Framework:
  - Added the optional org.xins.server.output.compatibility property that
    sets the output format compatibility for the returned XML. The APIs that
    want to keep compatibility with XINS 0.180 or below should set the value
    to "alpha".

* XINS/Java Common Library:
  - Added a new static method getItemByName() in EnumItem.
  - Changed the getItemByValue() to a static method.
  - Renamed getTimeOut() in class TargetDescriptor to getTotalTimeOut().
    Deprecated the method with the old name.
  - Added size() method to PropertyReader interface and to all implementing
    classes.
  - Added another way to find the hostname for the hostname task.

* XINS/Java Client Framework:
  - CallException and all subclasses now take CallRequest, TargetDescriptor
    and duration arguments. The exception message has been greatly improved.
    The old constructors have been removed, so existing code may need
    altering.
  - Removed deprecated methods from XINSServiceCaller class.
  - Added failOverAllowed property in CallRequest and changed
    XINSServiceCaller to always allow fail-over if this property is set.
  - Behaviour of XINSServiceCaller changed in case of an unsuccessful result.
    Previously, the result was directly returned. Now an
    UnsuccessfulCallException is immediately thrown, instead.
  - Supporting linking of CallExceptions by means of the
    setNext(CallException) and getNext() methods.